--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "description": "spiritser is the Modified Version of WhatsAsena, Made By @SPlRlT-YT with Baileys.",
     "logo": "https://i.imgur.com/MnGNqQ4.jpeg",
     "keywords": ["whatsapp", "userbot", "julie", "WhatsAsena", "mwol", "bot", "ai"],
-    "repository": "https://github.com/Amal-ser/Amalser",
+    "repository": "https://github.com/Kingmob007/SPIRIT-SER",
     "website":   "https://github.com/farhan-dqz/Julie-Mwol",
     "success_url": "https://github.com/farhan-dqz/Julie-Mwol",
     "stack": "container",
